practiced api request

--- a/html/01_index.html
+++ b/html/01_index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>01_index.html</title>
   </head>
-  <body style="background-color: black"></body>
-  <script src="/javascript/01_asyncawait.js"></script>
+  <body style="background-color: aliceblue">
+    <div class="container"></div>
+  </body>
+  <script src="/javascript/02_testapirequest.js"></script>
 </html>
