displayed api data in ul

--- a/01_practice/html/01_index.html
+++ b/01_practice/html/01_index.html
@@ -6,7 +6,11 @@
     <title>01_index.html</title>
   </head>
   <body style="background-color: aliceblue">
-    <div class="container"></div>
+    <div class="container">
+      <ul>
+        <li class="new-list"></li>
+      </ul>
+    </div>
   </body>
-  <script src="/javascript/02_testapirequest.js"></script>
+  <script src="../javascript/02_testapirequest.js"></script>
 </html>
