added list of sw characters

--- a/01_practice/html/01_index.html
+++ b/01_practice/html/01_index.html
@@ -7,9 +7,7 @@
   </head>
   <body style="background-color: aliceblue">
     <div class="container">
-      <ul>
-        <li class="new-list"></li>
-      </ul>
+      <p class="new-list"></p>
     </div>
   </body>
   <script src="../javascript/02_testapirequest.js"></script>
