form input and event listener

--- a/01_practice/html/01_index.html
+++ b/01_practice/html/01_index.html
@@ -9,6 +9,10 @@
     <div class="container">
       <p class="new-list"></p>
     </div>
+    <form>
+      <input class="input" type="text" , placeholder="type here" />
+      <button class="submit">submit</button>
+    </form>
   </body>
   <script src="../javascript/02_testapirequest.js"></script>
 </html>
